media.css
@media only screen and (min-width : 992px) and (max-width : 1199px) {
    .container {
        width: 100%;
        max-width: 1199px;
        background-color: #ffffff;
        margin: 0 auto;
    }


    
}


@media only screen and (min-width :  768px) and (max-width : 991px) {
    .container {
        width: 100%;
        max-width: 991px;
        background-color: #ffffff;
        margin: 0 auto;
    }


    .content {
        width: 100%;
        max-width: 767px;
        margin: 0 auto;
    }

    h1 {
        margin: 0;
        color: #1d1813;
        font-family: "Exo 2";
        font-size: 28px;
        font-weight: 500;
    }
    

    .nav_link{
        padding: 5px 15px 1px;
        background-color: #f5f3e8;
        text-decoration-style: dotted;
        color: #77716a;
        font-family: "Helvetica Neue";
        font-size: 16px;
        font-weight: 300;
        margin: 20px 5px 17px 5px;
    }

    .main {
        margin: 0 auto;
    }

    .card_img{
        width: 210px;
        height: 139px;
    }

    .card {
        margin: 0px 5px 45px 30px;
        max-width: 210px;
    }


    .card_title {
        color: #3c2f20;
        font-family: "Helvetica Neue";
        font-weight: 300;
        line-height: 32px;
        font-size: 14px;
    }
    
    .card_link {
        color: #3c2f20;
        text-decoration-style: dotted;
        font-family: "Exo 2";
     
    }

    .cheese_type {
    
        font-size: 20px;
        font-weight: 500;
        line-height: 25px;
        
    }
    
    .flour {
        font-family: "Exo 2";
        font-size: 16px;
        font-weight: 500;
        line-height: 15px;
    }
    
    .brand {
        margin: 10px 0px 5px 0px;
    }
    
    .description {
        max-width: 200px;
        height: 40px;
        color: #1d1813;
        font-family: "Helvetica Neue";
        font-size: 13px;
        font-weight: 300;
        line-height: 14px;
        
    }
    
}


@media only screen and (min-width :  576px) and (max-width : 767px) {
    .container {
        width: 100%;
        max-width: 767px;
        background-color: #ffffff;
        margin: 0 auto;
    }


    .content {
        width: 100%;
        max-width: 593px;
        margin: 0 auto;
    }

    h1 {
        margin: 0;
        color: #1d1813;
        font-family: "Exo 2";
        font-size: 28px;
        font-weight: 500;
    }

    .nav_link{
        padding: 10px 15px 5px;
        background-color: #f5f3e8;
        text-decoration-style: dotted;
        color: #77716a;
        font-family: "Helvetica Neue";
        font-size: 15px;
        font-weight: 300;
        margin: 10px 5px;
        line-height: 30px;
    }


    .nav_img {
        width: 70px;
        height: 21px;
    }
    

    .card_img{
        width: 180px;
        height: 117px;
    }

    .card {
        margin: 0px 5% 45px 1%;
        max-width: 160px;
    }


    .card_title {
        color: #3c2f20;
        font-family: "Helvetica Neue";
        font-weight: 300;
        line-height: 32px;
        font-size: 14px;
    }
    
    .card_link {
        color: #3c2f20;
        text-decoration-style: dotted;
        font-family: "Exo 2";
     
    }

    .cheese_type {
    
        font-size: 17px;
        font-weight: 500;
        line-height: 10px;
        
    }
    
    .flour {
        font-family: "Exo 2";
        font-size: 15px;
        font-weight: 500;
        line-height: 25px;
    }
    
    .brand {
        margin: 10px 0px 5px 0px;
    }
    
    .description {
        max-width: 160px;
        height: 40px;
        color: #1d1813;
        font-family: "Helvetica Neue";
        font-size: 12px;
        font-weight: 300;
        line-height: 14px;
        
        
    }
}



@media only screen and (min-width :  320px) and (max-width : 575px) {
    .container {
        max-width: 575px;
        
    }

    .content {
        max-width: 450px;
    }

    h1 {
        padding: 3%;
        font-size: 25px;
    }

    .nav_img {
        max-width: 60px;
        max-height: 18px;
    }

    .nav_link {
        width: 20%;
        padding: 2%;
    font-size: 14px;
    margin: 3% 1%;
    }


    .card {
        width: 94%;
        margin: 0 auto;
        display: flex;
        flex-direction: column;
    }
    
    
    .card_img{
        max-width: 300px;
        max-height: 200px;
        margin: 0 auto;
    }
    

    .card_link{
        margin: 0 auto;
        text-align: center;
    }

    .card_title {
       margin:  0 auto;
        font-size: 15px;
    }
    
   
    
    .cheese_type {
        margin: 0 auto;
        font-size: 24px;
        font-weight: 500;
        line-height: 20px;
        
    }
    
    .flour {
        margin: 0 auto;
        font-size: 18px;
        
        line-height: 27px;
    }
    
    .brand {
        width: 20%;
        margin: 10px auto;
    }
    
    .description {
        width: 90%;
        text-align: center;
        max-height: 50px;
        font-size: 15px;
        line-height: 18px;
        margin-bottom: 50px;
        
    }
}

